Added dashboad for manager, project manager and employee